--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,7 +85,12 @@
 
               <li><a href="#"><span class="glyphicon glyphicon-book"></span>Accounts</a></li>
               <li><a href="#"><span class="glyphicon glyphicon-euro"></span>Contracts</a></li>
-              <li><%= link_to  emails_path do %><span class="glyphicon glyphicon-envelope"></span>Emails<% end %></li>
+              <li id="emails">
+                  <%= link_to  emails_path do %>
+                    <span class="glyphicon glyphicon-envelope"></span>
+                    Emails
+                  <% end %>
+              </li>
                
               <li id="follow_ups">
               <%= link_to "/follow_ups" do %>
