--- a/app/views/users/invitations/new.html.erb
+++ b/app/views/users/invitations/new.html.erb
@@ -8,7 +8,7 @@ $(function(){
 </script>
 
 <div class="tab-container">
-<%= render 'users/menus' %>
+<%= render 'users/menu' %>
 <div class="tab-content" style="display:block">
 <div class="boxp box-theme-ch">
 <div class="htab">
