--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@ $(function(){
                 <% end %>
                 
                 <div id="users_permissions" style="display:none;">
-                  <%= render 'roles/permissions', role: a %>
+                  <%= render 'roles/permissions', role: a, f: "user" %>
                 </div>
                 
                 <div class="cl"></div>
