--- a/app/views/registrations/_listing.html.erb
+++ b/app/views/registrations/_listing.html.erb
@@ -1,144 +1,3 @@
-<!-- Registration datatable -->
-<div class="brg0 legends padt5" align="center">
-        <ul class="theme-colrs-lg">
-        <li><b>Legends</b></li>
-        <li><span class="red-theme-today"></span>&nbsp;Today</li>
-        <li><span class="yellow-theme-week"></span>&nbsp;This Week</li>
-        <li><span class="green-theme-reg"></span>&nbsp;Registered</li>
-        </ul>
-</div>
+<!-- Setting variables used in this partial -->
+<%= render 'shared/core_listing', model: "Registration" %>
 
-<div class="cl"></div>
-<br/>
-<% _id =  @status + "_registrations" %>
-<br/>
-<%= form_tag(url_for: "/asdf") do %>
-
-<!----------------------- New Enquiry ---------------------------->
-<% if can? :create, Registration %>
-<%= link_to "New Registration", new_registration_path, {class: "btnp"} %>
-<% else %>
-<%= link_to "New Registration", "#", {class: "btnpd"} %>
-<% end %>
-<!----------------------- Group Assign ---------------------------->
-            <% div_id = "group_assign_to_" + _id %>
-            
-            <% if can? :update, Registration %>
-              <%= link_to "Assign To", "#", {class: "btnp", onclick: "showPopUp('#{div_id}');"} %>
-            <% else %>
-              <%= link_to "Assign To", "#", {class: "btnpd"} %>
-            <% end %>
-            <div id="<%= div_id %>" class="addNewPop" data-model="Registration" style="display: none; top: 483px; left: 455px;"> 
-              <div class="frbox">
-                <%= image_tag "/images/icons/user_group.png" ,{size: "20x20"}%>
-                <%= label_tag :user %>
-                <%= select_tag "group_assign_user_#{_id}",
-                               options_for_select(User.order(:first_name).map{|i| [i.name,i.id]}),
-                               {:prompt => "--User--"} %>
-                <span class="btnp" onclick="groupAssignTo('<%= _id %>');">Assign</span>
-              </div>
-            </div>
-            <!----------------------- Bulk Email ---------------------------->
-            
-            <% if can? :create, Email %>
-              <%= link_to "Bulk Email", "#", {class: "btnp", onclick: "bulkEmail('#{_id}');"} %>
-            <% else %>
-              <%= link_to "Bulk Email", "#", {class: "btnpd"} %>
-            <% end %>
-            
-            <!----------------------- Group Delete ---------------------------->
-            <% div_delete_id = "group_delete_to_" + _id %>
-            
-            <% if can? :destroy, Registration %>
-            <%= link_to "Delete", "#", {class: "btnp ", onclick: "showPopUp('#{div_delete_id}');"} %>
-            <% else %>
-            <%= link_to "Delete", "#", {class: "btnpd "} %>
-            <% end %>
-            <div id="<%= div_delete_id %>" class="addNewPop" style="display: none; top: 483px; left: 455px;"> 
-              <div class="frbox">
-                <%= image_tag "/images/icons/folder_delete.png" ,{size: "20x20"}%>
-                <h5>Are you sure about this group delete?</h5>
-                <span class="btnp" onclick="groupDelete('<%= _id %>');"> Yes </span>
-                <span class="btnp" onclick="$('#<%= div_delete_id %>').hide();"> No </span>
-              </div>
-            </div>
-<!---------------------------------------------------------------->
-<table id='<%= _id %>' class="display" data-source="<%= registrations_url(format: "json") %>">
-<thead>
-  <tr>
-      <th>
-      <%= check_box_tag "master",nil,false,{id: "master_check",checked: false, onclick: "toggleAllCheck(this,'#{_id}');"} %>
-      </th>
-      <th>
-      Actions
-      </th>
-      <% @cols.each do |i| %>
-        <% if i.is_a?(Array) %>
-          <th><%= i[1].to_s.titleize %></th>
-        <% else %>
-          <th <%= (i.to_s == 'statuses' ? 'class=statuses' : '') %>>
-          <%= i.to_s.titleize %>
-          </th>
-        <% end %>
-      <% end %>
-     
-  </tr>
-
-
-</thead>
-
-
-<!----------------------- Search filter ---------------------------->
-       <%= select_tag :abdc,
-                      options_for_select((@cols - [:follow_up_date]).map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift(["--Filter By--",""])),
-                      {id: "mySelect",style: "width:150px;margin-left:10px;height:24px;",class: "fr srch_sel"} %>
-                      
-                             
-<!----------------------- FollowUp filter ---------------------------->
-
-<%= label_tag "follow_up_filter:",
-               nil,
-               {class: "",style: "margin-left:15px;margin-right:5px;margin-bottom:10px;"} %>
-			   
-<%= select_tag :abdc,
-                      options_for_select([["--All Time--",""],["Today","todays"],["This Week","this_weeks"],["This Month","this_months"],["No FollowUp","no_followups"]]),
-                      {id: "followUpSelect",style: "width:150px",class: ""} %>
-                      
-       
- <span class="btnp" style="margin-left:5px" onclick="resetDataTable();">Reset</span>
- 
- <%= image_tag "/images/icons/info.png",{class: "tooltip",
-                                        title: "Use the dropdown to filter search. Use reset to clear the search box"} %>
-
-										
-			   <br/><br/>
-   
-       
-<tbody>
-
-</tbody>
-
-</table>
-            
-<% end %>
-<style>
-#registrations_filter input{
-width:150px;
-}
-#registrations_filter label{
-float:left;
-}
-#all_registrations tbody tr:hover{background-color:#ccc}
-</style>
-
-<script>
-$(function(){
-dataTableStart("<%= _id %>","<%= @status %>","<%= @cols %>","<%= @cols.size + 1 %>");
-setColorsFromSession();
-mytooltip();
-setDataTableWidth();
-
-$('.dataTables_filter .srch_sel').remove();
-$('.srch_sel').prependTo('#<%= _id %>_filter');
-});
-</script>
