--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -1,12 +1,7 @@
-<script type="text/javascript">
-$(function(){
-  $("ul.tab-menus li.all").trigger('click');
-    activeMM("registrationsMM");
-});
 
-</script>
-<div class="tab-container tab-content-theme">
-    <%= render 'enquiries/tabs', :stat => "ApplicationStatus",:model => "registration" %>  
-</div>
+<%= render 'shared/core_index', model: "Registration",
+                         new: "new_registration_path",
+                         tab: "ApplicationStatus" %>
+
 
 
