--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -10,7 +10,7 @@
           <%= bs(f,"name","text_field",[nil,3],6) %>
           <%= bs(f,[:desc,{class: 'form-control', cols: nil, rows: nil}],"text_area",[nil,3],6) %>
           
-          <%= render 'permissions', f: f, role: new_resource %>
+          <%= render 'permissions', f: "role", role: new_resource %>
           <br/>
           <div class="form-group form-last">
             <div class="col-sm-offset-10 col-sm-5">
