--- a/app/views/shared/_assign_to.html.erb
+++ b/app/views/shared/_assign_to.html.erb
@@ -1,3 +1,4 @@
+<!-- assign_to for core models -->
 <div class="htab">
 <h6><b>Assign To</b></h6>
 </div>
@@ -23,4 +24,6 @@
     
 </div>
 <% end %>
+
+<script> acttab('assign_to'); </script>
 
