--- a/app/views/shared/_email.html.erb
+++ b/app/views/shared/_email.html.erb
@@ -1,5 +1,5 @@
 <!-- emails to enquiry -->
-<br/>
+
 <% if @list.to_i == 1 && obj.first.emails.size > 0 %>
     <table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
          <thead>
@@ -128,5 +128,5 @@ tinymce.init({
      autosave_ask_before_unload: false
 });
 
-actsm("email");
+  acttab('email');
 </script>
