--- a/app/views/shared/_follow_up.html.erb
+++ b/app/views/shared/_follow_up.html.erb
@@ -1,8 +1,4 @@
-<script>
-$(function(){
-    imagePreview("follow_up");
-});
-</script>
+<!-- follow_ups for core models -->
 <% if @list.to_i == 1 && obj.follow_ups.size > 0 %>
 <table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
      <thead>
@@ -77,3 +73,5 @@ $(function(){
     <div class="cl"></div>
 <% end %>
 </div>
+
+<script> acttab('follow_up'); </script>
