--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,11 +9,12 @@
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require bootstrap
-*= require custom
 *= require dt-bootstrap
 *= require multi-select
 *= require fullcalendar
 *= require token-input-bootstrappy
+*= require jquery-ui-datepicker
+*= require custom
 
 */
 
